Add profile image and update index.html

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
   <div class="intro">
     <h1>Hello, My name is Mariem</h1>
-    <img src="C:\Users\HP\Desktop\projet1\mariamphoto.jpg" alt="Profile Picture">
+    <img src="C:\Users\HP\Desktop\projet1\images\mariamphoto.jpg" alt="Profile Picture">
   </div>
 
   <div class="container">
